[gd_scene load_steps=2 format=3 uid="uid://redigeoyea6s"]

[ext_resource type="Script" uid="uid://cjgb6kkmxsjrc" path="res://scripts/PauseMenu.gd" id="1_c7v6e"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 128

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_c7v6e")

[node name="Backdrop" type="Panel" parent="Root"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Window" type="Panel" parent="Root"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="Root/Window"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="Root/Window/VBox"]
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="Root/Window/VBox"]
layout_mode = 2

[node name="OptionsBtn" type="Button" parent="Root/Window/VBox"]
layout_mode = 2

[node name="HS" type="HSeparator" parent="Root/Window/VBox"]
layout_mode = 2

[node name="QuitBtn" type="Button" parent="Root/Window/VBox"]
layout_mode = 2

[node name="Options" type="VBoxContainer" parent="Root/Window"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VolRow" type="HBoxContainer" parent="Root/Window/Options"]
layout_mode = 2

[node name="VolLabel" type="Label" parent="Root/Window/Options/VolRow"]
layout_mode = 2

[node name="Volume" type="HSlider" parent="Root/Window/Options/VolRow"]
layout_mode = 2

[node name="Tip" type="Label" parent="Root/Window/Options"]
layout_mode = 2
